--- a/src/components/FeaturedRotator/featuredRotator.module.css
+++ b/src/components/FeaturedRotator/featuredRotator.module.css
@@ -13,10 +13,10 @@
     justify-content: end;
     padding: .4rem;
     margin: .4rem;
-    width: 800px;
+    width: 100%;
     height: 800px;
-    background-color: black;
-    color: white;
+    background-color: #4F5D75;
+    color: #EFF7F6;
     font-family: "Droid Sans Mono", monospace;
 }
 
@@ -30,7 +30,7 @@
 
 .rotator-counter {
     border-radius: 100px;
-    background-color: black;
+    background-color: #4F5D75;
     opacity: 0.3;
     width: 7px;
     height: 7px;
