Updates stling to keep things in line

--- a/src/components/FeaturedRotator/featuredRotator.module.css
+++ b/src/components/FeaturedRotator/featuredRotator.module.css
@@ -17,6 +17,7 @@
     height: 14rem;
     justify-content: center;
     align-items: center;
+    margin-bottom: 3rem;
 }
 
 .rotator-item-container > span,
