--- a/src/components/CollectionList/collectionList.module.css
+++ b/src/components/CollectionList/collectionList.module.css
@@ -1,10 +1,10 @@
 .meta-container {
-    padding-top: 50px;
+    width: 100%;
 }
 
 .collection-list {
     list-style: none;
-    padding: 0
+    padding: 0 .4rem;
 }
 
 .content-meta {
@@ -13,21 +13,10 @@
     margin-bottom: 28px;
 }
 
-.content-meta > a,
+.content-meta > h3,
 .content-meta > p {
-    margin: 0;
+    margin: .15rem 0;
     font-family: "Droid Sans Mono", monospace;
-}
-
-.content-meta > a {
-    margin-bottom: 8px;
-    font-weight: 700;
-    font-size: large;
-    color: #2D3142;
-    text-decoration: none;
-}
-
-.content-meta > p {
     color: #4F5D75;
 }
 
