--- a/src/components/FeaturedRotator/featuredRotator.module.css
+++ b/src/components/FeaturedRotator/featuredRotator.module.css
@@ -1,29 +1,27 @@
+.rotator-container {
+    display: flex;
+    flex-direction: column;
+    height: 10rem;
+    justify-content: center;
+    align-items: center;
+}
+
 .rotator-item-container {
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: end;
+    padding: .4rem;
     margin: .4rem;
     width: 100%;
-    height: 100%;
+    height: 800px;
     background-color: #4F5D75;
     color: #EFF7F6;
     font-family: "Droid Sans Mono", monospace;
 }
 
-.rotator-container {
-    display: flex;
-    flex-direction: column;
-    height: 14rem;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 3rem;
-}
-
-.rotator-item-container > span,
 .rotator-item-container > h3 {
-    margin-left: .3em;
-    margin-bottom: 5px;
+    margin: 2px 0;
 }
 
 .rotator-counter-container {
