--- a/src/components/FeaturedRotator/featuredRotator.module.css
+++ b/src/components/FeaturedRotator/featuredRotator.module.css
@@ -8,6 +8,7 @@
     height: 100%;
     background-color: #4F5D75;
     color: #EFF7F6;
+    line-height: 1;
     font-family: "Droid Sans Mono", monospace;
 }
 
@@ -22,8 +23,7 @@
 
 .rotator-item-container > span,
 .rotator-item-container > h3 {
-    margin-left: .3em;
-    margin-bottom: 5px;
+    margin: 5px .3em;
 }
 
 .rotator-counter-container {
