--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     color: #4F5D75;
     font-size: 18px;
-    line-height: 1.75;
+    line-height: 1.55;
     letter-spacing: 0.033em;
     overflow-x: hidden;
 }
@@ -11,12 +11,34 @@ pre {
     display: flex;
     align-items: center;
     padding: 24px;
+    margin: 3rem 0;
     border-radius: 20px;
     background: #EFF7F6;
     overflow-x: scroll;
+    font-size: 16px;
 }
 
 code {
-    font-size: 18px;
     color: #EF8354;
+}
+
+@media (max-width: 800px) {
+    body {
+        font-size: 14px;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        line-height: 1.33;
+    }
+    h2,
+    h3,
+    h4 {
+        margin-top: 3.3rem;
+    }
+    pre {
+        font-size: 12px;
+    }
 }
