Introduce first post and global styles (#5)
* post work in progress

* Updates to global styles and local styles

* Global styling troubleshooting

* Mobile container adjustment

* Adds quote component, updates blog post

--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,45 @@
 body {
-    font-family: "Droid Sans Mono", monospace;
+    font-family: sans-serif;
     color: #4F5D75;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.033em;
+    overflow-x: hidden;
+}
+
+pre {
+    display: flex;
+    align-items: center;
+    padding: 24px;
+    margin: 3rem 0;
+    border-radius: 20px;
+    background: #EFF7F6;
+    overflow-x: scroll;
+    font-size: 16px;
+}
+
+code {
+    color: #EF8354;
+}
+
+@media (max-width: 800px) {
+    body {
+        font-size: 14px;
+        margin: 0 1.5rem;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        line-height: 1.33;
+    }
+    h2,
+    h3,
+    h4 {
+        margin-top: 3.3rem;
+    }
+    pre {
+        font-size: 12px;
+    }
 }
